Fixed horizontal shift

--- a/src/static/wardTracker/trackerStyle.css
+++ b/src/static/wardTracker/trackerStyle.css
@@ -12,7 +12,7 @@ h2 {
     /* height: 300px; */
     height: 50vh;
     
-    left: 3vw;
+    left: 12px;
 
     /* max-width: 500px; */
     
